--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "stock-saarthi",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "cd client && npm run dev",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "cd client && npm run build"
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
