--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "json5": "^2.2.3",
     "pg": "^8.12.0",
-    "python-shell": "^5.0.0"
+    "python-shell": "^5.0.0",
+    "react-heatmap": "^1.0.6"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
